Added support for minimal log level (fixes #6, fixes #7, closes #9)
- Added support for minimal log level
- Added compatibility for relative application path
- Removed checking all log files on init
- Smaller improvements

--- a/.htaccess
+++ b/.htaccess
@@ -12,9 +12,19 @@
     
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)$ index.php?c=$1&l=$2
+    RewriteRule ^([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/([0-9]{3}) index.php?c=$1&l=$2&f=$3 [QSA]
+    
     
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/$ index.php?c=$1&l=$2
+    RewriteRule ^([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/([0-9]{3})/ index.php?c=$1&l=$2&f=$3 [QSA]
+    
+    
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+) index.php?c=$1&l=$2 [QSA]
+    
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/ index.php?c=$1&l=$2 [QSA]
 </IfModule>
