--- a/config/config_example.json
+++ b/config/config_example.json
@@ -1,5 +1,6 @@
 {
-    "clients": [
+    "timezone" : "Europe/Zurich",
+    "clients" : [
         {
             "name": "Demo-Client",
             "logs": {
