--- a/app/config/config_example.json
+++ b/app/config/config_example.json
@@ -1,5 +1,7 @@
 {
+    "debug" : false,
     "timezone" : "Europe/Zurich",
+    "dateFormat" : "Y-m-d, H:i:s",
     "clients" : [
         {
             "name": "Demo-Client",
